--- a/Lab_4.html
+++ b/Lab_4.html
@@ -29,6 +29,14 @@
                 text-align: right;
                 padding: 20px;
             }
+            h1{
+                font-size: 30px;
+                text-align: center;
+            }
+            p{
+                width: 450px;
+                margin: 18px auto;
+            }
         </style>
     </head>
     <body>
@@ -36,6 +44,28 @@
             <b>Никита Николаевич</b>
         </div>
         <div class="content">
+           <h1>Омар Хайам</h1>
+
+           <h1>Кто понял жизнь тот больше не спешит</h1>
+           
+            <p>
+                Кто понял жизнь тот больше не спешит,<br>
+                Смакует каждый миг и наблюдает,<br>
+                Как спит ребёнок, молится старик,<br>
+                Как дождь идёт и как снежинки тают.<br>
+                В обыкновенном видит красоту,<br>
+                В запутанном простейшее решенье,<br>
+                Он знает, как осуществить мечту,<br>
+                Он любит жизнь и верит в воскресенье,<br>
+                Он понял то, что счастье не в деньгах,<br>
+                И их количество от горя не спасет,<br>
+                Но кто живёт с синицею в руках,<br>
+                Свою жар-птицу точно не найдет<br>
+                Кто понял жизнь, тот понял суть вещей,<br>
+                Что совершенней жизни только смерть,<br>
+                Что знать, не удивляясь, пострашней,<br>
+                Чем что-нибудь не знать и не уметь.
+            </p>
         </div>
         <div class="footer">
             <i>Факультет Бизнеса, ФБИ-03, 3 курс, 2022</i>
