--- a/Lab_4.html
+++ b/Lab_4.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Карпунин Никита.ФБИ-03. Лабораторная работа №3</title>
+        <title>Карпунин Никита. ФБИ-03. Лабораторная работа №3</title>
         <style>
             body {
                 background-color: darkcyan;
@@ -40,6 +40,14 @@
             p:hover{
                 color: blue;
                 text-shadow: 3px 3px 5px #aaa;
+            }
+            h1:hover{
+                color: rgb(255, 166, 0);
+                text-shadow: 3px 3px 5px #aaa;
+            }
+            footer:active{
+                color: rgb(255, 166, 0);
+                opacity: 40%;
             }
         </style>
     </head>
