--- a/Lab_4.html
+++ b/Lab_4.html
@@ -49,6 +49,12 @@
                 color: rgb(255, 166, 0);
                 opacity: 40%;
             }
+            p::first-line{
+                color: black;
+            }
+            p::first-letter{
+                color: red;
+            }
         </style>
     </head>
     <body>
