--- a/lab5.html
+++ b/lab5.html
@@ -14,45 +14,30 @@
                 font-size: 20px;
                 font-weight: bold;
                 text-align: left;
-                line-clamp: 80px;
+                height: 80px;
                 line-height: 80px;
                 padding-left: 30px;
             }
             .footer{
                 background-color: #333;
                 color: #888;
-                margin-top: 30px;
-                border-top: 2px solid #777;
                 font-size: 14px;
                 font-style: italic;
                 text-align: right;
-                padding: 30px 30px 20px;
+                height: 30px;;
+                line-height: 30px;
+                padding: 20px;
             }
-            h1{
-                font-size: 30px;
-                text-align: center;
+            .a{
+                width: 200px;
+                height: 50;
+                float: left;
+
             }
-            p{
-                width: 450px;
-                margin: 18px auto;
-            }
-            p:hover{
-                color: blue;
-                text-shadow: 3px 3px 5px #aaa;
-            }
-            h1:hover{
-                color: rgb(255, 166, 0);
-                text-shadow: 3px 3px 5px #aaa;
-            }
-            .footer:active{
-                color: rgb(255, 166, 0);
-                opacity: 40%;
-            }
-            p::first-line{
-                color: black;
-            }
-            p::first-letter{
-                color: red;
+            .b{
+                width: 200px;
+                height: 50;
+                float: right;
             }
         </style>
     </head>
@@ -61,7 +46,21 @@
             <b>Никита Николаевич</b>
         </div>
         <div class="content">
-           <h1>Омар Хайам</h1>
+            <h1>Inline</h1>
+            <div class="a">block 1</div>
+            <div class="a">block 2</div>
+            <div class="a">block 3</div>
+
+            <div class="b">block 1</div>
+            <div class="b">block 2</div>
+            <div class="b">block 3</div>
+
+            <h1>Float</h1>
+            <div class="c">block 4</div>
+            <div class="c">block 5</div>
+            <div class="c">block 6</div>
+
+            <div style="clear:both">end</div>
         </div>
         <div class="footer">
             <i>Факультет Бизнеса, ФБИ-03, 3 курс, 2022</i>
