--- a/lab5.html
+++ b/lab5.html
@@ -23,14 +23,19 @@
                 color: #888;
                 font-size: 14px;
                 font-style: italic;
-                text-align: right;
-                height: 30px;;
+                text-align: left;
+                height: 30px;
+                width: 3000px;
                 line-height: 30px;
                 padding: 20px;
+                position: fixed;
+                bottom: 0px;
             }
             .b{
                 background-color: rgb(228, 198, 198);
-                border:  5px;
+                border-color: #333;
+                border-style: solid;
+                border-width: 5px;
                 width: 200px;
                 height: 50;
                 float: left;
@@ -38,7 +43,9 @@
             }
             .c{
                 background-color: rgb(228, 198, 198);
-                border:  5px;
+                border-color: #333;
+                border-style: solid;
+                border-width: 5px;
                 width: 200px;
                 height: 50;
                 float: right;
@@ -60,6 +67,7 @@
             }
             .e:hover {
                 background-color: #516;
+                z-index: 1;
             }
         </style>
     </head>
