Вывод сообщений в консоль

--- a/Lab_6.html
+++ b/Lab_6.html
@@ -3,6 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Карпунин Никита. ФБИ-03. Лабораторная работа №3</title>
+        <script>
+            console.log('Всем привет!!11')
+
+            let x = 33;
+            let s = 'яблоки';
+            let if = 17;
+            console.log('x=', x, 's= ', s);
+        </script>
     </head>
     <body>
         <div class="header">
@@ -15,7 +23,7 @@
                     <span>Ваше имя</span><input type="text">
                 </div>
                 <div>
-                    <span>Ваша фамилмя</span><input type="text">
+                    <span>Ваша фамилия</span><input type="text">
                 </div>
                 <div>
                     <span>Ваш возвраст</span><input type="number">
