--- a/Lab_6.html
+++ b/Lab_6.html
@@ -24,18 +24,20 @@
         </div>
         <div class="content">
             <form>
-                <div>
-                    <span id="your-name">Ваше имя</span><input type="text" id="input-name" placeholder="введите имя">
-                </div>
-                <div>
-                    <span id="your-surname">Ваша фамилия</span><input type="text" id="input-surname" placeholder="введите фамилию">
-                </div>
-                <div>
-                    <span id="your-age">Ваш возвраст</span><input type="number" id="input-age" placeholder="введите возвраст">
-                </div>
-                <div>
-                    <input type="button" value="ok" id="ok-button">
-                    <input type="reset" value="сброс" id="reset-button">
+                <div id="user-data">
+                    <div>
+                        <span id="your-name">Ваше имя</span><input type="text" id="input-name" placeholder="введите имя">
+                    </div>
+                    <div>
+                        <span id="your-surname">Ваша фамилия</span><input type="text" id="input-surname" placeholder="введите фамилию">
+                    </div>
+                    <div>
+                        <span id="your-age">Ваш возвраст</span><input type="number" id="input-age" placeholder="введите возвраст">
+                    </div>
+                    <div>
+                        <input type="button" value="ok" id="ok-button" onclick="showAlert()">
+                        <input type="reset" value="сброс" id="reset-button">
+                    </div>
                 </div>
             </form>
         </div>
