Вывод сообщений в консоль

--- a/Lab_6.html
+++ b/Lab_6.html
@@ -14,7 +14,7 @@
         <script src="Lab_6.js"></script>
     </head>
     <body>
-        <div class="header">
+        <div class="header" id="header" onclick="bc()">
             <div id="student">Никита Николаевич</div>
         <div class="language">
             <input type="button" value="ru" onclick="setRussian()">
@@ -40,8 +40,10 @@
                     </div>
                 </div>
             </form>
+
+
         </div>
-        <div class="footer" id="footer">
+        <div class="footer" id="footer" onclick="bc()">
             <i>Факультет Бизнеса, ФБИ-03, 3 курс, 2022</i>
         </div>
     </body>
