--- a/Lab_4.html
+++ b/Lab_4.html
@@ -45,7 +45,7 @@
                 color: rgb(255, 166, 0);
                 text-shadow: 3px 3px 5px #aaa;
             }
-            footer:active{
+            .footer:active{
                 color: rgb(255, 166, 0);
                 opacity: 40%;
             }
